fix(avatar): set name vertical-align: middle

--- a/bricks/basic/src/avatar/styles.shadow.css
+++ b/bricks/basic/src/avatar/styles.shadow.css
@@ -105,4 +105,5 @@
 
 .name {
   margin-left: 4px;
+  vertical-align: middle;
 }
